[gd_scene load_steps=12 format=3 uid="uid://dv1flht0vgb8m"]

[ext_resource type="Theme" uid="uid://br81pr4h7m5j" path="res://Components/GUI/Settings/SettingsTheme.tres" id="1_uvteg"]
[ext_resource type="Script" path="res://Components/GUI/Settings/Settings.gd" id="2_vlsl0"]
[ext_resource type="Shader" path="res://Components/GUI/Settings/Settings.gdshader" id="3_1ad0a"]
[ext_resource type="Texture2D" uid="uid://bj0e6n0m8il5f" path="res://addons/kenney_particle_pack/magic_02.png" id="4_ycmop"]
[ext_resource type="Texture2D" uid="uid://dru0vd3dsnr4b" path="res://addons/kenney_particle_pack/magic_01.png" id="5_68ctc"]

[sub_resource type="Gradient" id="Gradient_ffrx6"]
interpolation_mode = 2
offsets = PackedFloat32Array(0, 0.157088, 1)
colors = PackedColorArray(0, 0.345098, 0.345098, 1, 0, 0.178463, 0.178463, 1, 0, 0.0901961, 0.0901961, 1)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_v6xdi"]
gradient = SubResource("Gradient_ffrx6")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_6khpc"]
shader = ExtResource("3_1ad0a")
shader_parameter/Gradient = SubResource("GradientTexture1D_v6xdi")

[sub_resource type="Animation" id="Animation_au2n5"]
resource_name = "settings_animation"
length = 16.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 16),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 12.5664]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D/Sprite2D2:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 16),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, -18.8496]
}

[sub_resource type="Animation" id="Animation_nejca"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D/Sprite2D2:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [-12.5664]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_xyqo2"]
_data = {
"RESET": SubResource("Animation_nejca"),
"settings_animation": SubResource("Animation_au2n5")
}

[node name="Settings" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
focus_mode = 1
theme = ExtResource("1_uvteg")
script = ExtResource("2_vlsl0")

[node name="ColorRect" type="ColorRect" parent="."]
material = SubResource("ShaderMaterial_6khpc")
custom_minimum_size = Vector2(1152, 648)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
focus_mode = 1
color = Color(0, 0, 0, 1)

[node name="Inputs" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 13
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -116.5
offset_right = 116.5
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="Inputs"]
layout_mode = 2
text = "SETTINGS"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="Inputs"]
layout_mode = 2
theme_override_constants/separation = 16

[node name="ScrollContainer" type="ScrollContainer" parent="Inputs"]
clip_contents = false
custom_minimum_size = Vector2(0, 552)
layout_mode = 2
size_flags_horizontal = 4
horizontal_scroll_mode = 0

[node name="Vcontainer" type="VBoxContainer" parent="Inputs/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 10
size_flags_vertical = 3
theme_override_constants/separation = 12
alignment = 1

[node name="Label" type="Label" parent="Inputs/ScrollContainer/Vcontainer" groups=["dont_label"]]
layout_mode = 2
text = "testing"

[node name="WindowMode" type="OptionButton" parent="Inputs/ScrollContainer/Vcontainer"]
layout_mode = 2
item_count = 3
selected = 0
popup/item_0/text = "Windowed"
popup/item_0/id = 0
popup/item_1/text = "Windowed FullScreen"
popup/item_1/id = 4
popup/item_2/text = "FullScreen"
popup/item_2/id = 3

[node name="VSync" type="OptionButton" parent="Inputs/ScrollContainer/Vcontainer"]
layout_mode = 2
item_count = 4
selected = 0
popup/item_0/text = "Disabled"
popup/item_0/id = 0
popup/item_1/text = "Enabled"
popup/item_1/id = 1
popup/item_2/text = "Adaptive"
popup/item_2/id = 2
popup/item_3/text = "Mailbox"
popup/item_3/id = 3

[node name="MSAA" type="OptionButton" parent="Inputs/ScrollContainer/Vcontainer"]
layout_mode = 2
item_count = 4
selected = 0
popup/item_0/text = "Disable"
popup/item_0/id = 0
popup/item_1/text = "2x"
popup/item_1/id = 1
popup/item_2/text = "4x"
popup/item_2/id = 2
popup/item_3/text = "8x"
popup/item_3/id = 3

[node name="ShadowQuality" type="OptionButton" parent="Inputs/ScrollContainer/Vcontainer"]
layout_mode = 2
item_count = 5
selected = 2
popup/item_0/text = "Very Low"
popup/item_0/id = 0
popup/item_1/text = "Low"
popup/item_1/id = 1
popup/item_2/text = "Medium"
popup/item_2/id = 2
popup/item_3/text = "High"
popup/item_3/id = 3
popup/item_4/text = "Very High"
popup/item_4/id = 4

[node name="RestartNeeded" type="Label" parent="."]
visible = false
layout_mode = 2
offset_left = 421.5
offset_top = 611.0
offset_right = 730.5
offset_bottom = 634.0
text = "Restart Needed To Apply Some Changes"
horizontal_alignment = 1

[node name="Camera2D" type="Camera2D" parent="."]
anchor_mode = 0

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("4_ycmop")

[node name="Sprite2D2" type="Sprite2D" parent="Sprite2D"]
rotation = -12.5664
scale = Vector2(0.5, 0.5)
texture = ExtResource("5_68ctc")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_xyqo2")
}

[connection signal="item_selected" from="Inputs/ScrollContainer/Vcontainer/WindowMode" to="." method="_on_window_mode_item_selected"]
[connection signal="item_selected" from="Inputs/ScrollContainer/Vcontainer/VSync" to="." method="_on_v_sync_item_selected"]
[connection signal="item_selected" from="Inputs/ScrollContainer/Vcontainer/MSAA" to="." method="_on_msaa_item_selected"]
[connection signal="item_selected" from="Inputs/ScrollContainer/Vcontainer/ShadowQuality" to="." method="_on_shadow_quality_item_selected"]
